--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,8 +1,47 @@
 {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft" : "Information"
+      }
+    }
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/applog-.txt",
+          "rollingInterval": "Day"
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://libra-seq:5341"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "ApplicationName": "Libra"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=libra;User Id=postgres;Password=2204;"
+  },
+  "ApiKey": "bELmrVJ5QjsIWVsmNMzGpg==hvTfIVrRpHABhXwP",
+  "Authentication": {
+    "Secret": "CLEMSON_SECRET_KEY_WITH_JWT_AUTH"
   }
 }
