--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,30 @@
 {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/applog-.txt",
+          "rollingInterval": "Day"
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://libra-seq:5341"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "ApplicationName": "Libra"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -12,25 +38,5 @@
   "ApiKey": "bELmrVJ5QjsIWVsmNMzGpg==hvTfIVrRpHABhXwP",
   "Authentication": {
     "Secret": "CLEMSON_SECRET_KEY_WITH_JWT_AUTH"
-  },
-  "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
-    "MinimumLevel": "Information",
-    "WriteTo": [
-      {
-        "Name": "Console"
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "Logs/applog-.txt",
-          "rollingInterval": "Day"
-        }
-      }
-    ],
-    "Enrich": [ "FromLogContext", "WithMachineName" ],
-    "Properties": {
-      "ApplicationName": "Libra"
-    }
   }
 }
