--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - otel-collector
     build:
       context: .
-      dockerfile: OpenRemoteManage.GatewayAPI/Dockerfile
+      dockerfile: Libra.GatewayAPI/Dockerfile
     ports:
       - 5131:5131
     environment:
